--- a/capi/geos_c.h.in
+++ b/capi/geos_c.h.in
@@ -3633,24 +3633,28 @@ extern GEOSGeometry GEOS_DLL *GEOSMaximumInscribedCircle(
     double tolerance);
 
 /**
-* Constructs the "largest empty circle" (LEC) for a set of obstacle geometries, up to a
-* specified tolerance. The obstacles are point and line geometries. Polygonal obstacles willl
-* be treated as linear features.
-* The LEC is the largest circle which  has its **center** inside the boundary,
-* and whose interior does not intersect with any obstacle. If no boundary is provided, the
-* convex hull of the obstacles is used as the boundary.
+* Constructs the "largest empty circle" (LEC) for a set of obstacle geometries
+* and within a polygonal boundary,
+* with accuracy to to a specified distance tolerance.
+* The obstacles are point and line geometries.
+* Polygonal obstacles are treated as linear features.
+* The LEC is the largest circle whose interior does not intersect with any obstacle.
+* and which has its **center** inside the given boundary.
+* If no boundary is provided, the
+* convex hull of the obstacles is used.
 * The LEC center is the point in the interior of the boundary which has the farthest distance from
-* the obstacles (up to tolerance). The LEC is determined by the center point and a point lying on an
-* obstacle indicating the circle radius.
+* the obstacles (up to the given distance tolerance).
+* The LEC is determined by the center point and a point indicating the circle radius
+* (which will lie on an obstacle).
 * The implementation uses a successive-approximation technique over a grid of square cells covering the obstacles and boundary.
 * The grid is refined using a branch-and-bound algorithm.  Point containment and distance are computed in a performant
 * way by using spatial indexes.
-* Returns a two-point linestring, with the start point at the center of the inscribed circle and the end
-* on the boundary of the inscribed circle.
-* \param obstacles The geometries that the LEC must fit within without covering
-* \param boundary The area within which the LEC must reside
+* Returns the LEC radius as a two-point linestring, with the start point at the center of the inscribed circle and the end
+* on the boundary of the circle.
+* \param obstacles The geometries that the LEC must not cross
+* \param boundary The area to contain the LEC center (may be null or empty)
 * \param tolerance Stop the algorithm when the search area is smaller than this tolerance
-* \return A newly allocated geometry of the LEC. NULL on exception.
+* \return A newly allocated geometry of the LEC radius. NULL on exception.
 * Caller is responsible for freeing with GEOSGeom_destroy().
 * \see geos::algorithm::construct::LargestEmptyCircle
 */
