--- a/capi/geos_c.h.in
+++ b/capi/geos_c.h.in
@@ -174,6 +174,14 @@ typedef struct GEOSBufParams_t GEOSBufferParams;
 */
 typedef struct GEOSMakeValidParams_t GEOSMakeValidParams;
 
+/**
+* Utility object to hold GEOSGeometry pointers
+* \see GEOSGeometryList_create()
+* \see GEOSGeometryList_destroy()
+*/
+typedef struct GEOSGeometryList_t GEOSGeometryList;
+
+
 #endif
 
 /** \cond */
@@ -746,6 +754,50 @@ extern GEOSGeometry GEOS_DLL *GEOSGeom_createRectangle_r(
 extern GEOSGeometry GEOS_DLL *GEOSGeom_clone_r(
     GEOSContextHandle_t handle,
     const GEOSGeometry* g);
+
+/* ========= Geometry Lists ========= */
+/** \see GEOSGeometryList_create */
+extern GEOSGeometryList GEOS_DLL *
+    GEOSGeometryList_create_r(
+        GEOSContextHandle_t handle);
+
+/** \see GEOSGeometryList_destroy */
+extern int GEOS_DLL
+    GEOSGeometryList_destroy_r(
+        GEOSContextHandle_t handle,
+        GEOSGeometryList* list);
+
+/** \see GEOSGeometryList_release */
+extern int GEOS_DLL
+    GEOSGeometryList_release_r(
+        GEOSContextHandle_t handle,
+        GEOSGeometryList* list);
+
+/** \see GEOSGeometryList_push */
+extern int GEOS_DLL
+    GEOSGeometryList_push_r(
+        GEOSContextHandle_t extHandle,
+        GEOSGeometryList* list,
+        GEOSGeometry* g);
+
+/** \see GEOSGeometryList_pop */
+extern GEOSGeometry* GEOS_DLL
+    GEOSGeometryList_pop_r(
+        GEOSContextHandle_t extHandle,
+        GEOSGeometryList* list);
+
+/** \see GEOSGeometryList_size */
+extern int GEOS_DLL
+    GEOSGeometryList_size_r(
+        GEOSContextHandle_t extHandle,
+        GEOSGeometryList* list);
+
+/** \see GEOSGeometryList_at */
+extern GEOSGeometry* GEOS_DLL
+    GEOSGeometryList_at_r(
+        GEOSContextHandle_t extHandle,
+        GEOSGeometryList* list,
+        unsigned int i);
 
 /* ========= Memory management ========= */
 
@@ -2428,6 +2480,82 @@ extern GEOSGeometry GEOS_DLL *GEOSGeom_clone(const GEOSGeometry* g);
 * \param g The geometry to be destroyed.
 */
 extern void GEOS_DLL GEOSGeom_destroy(GEOSGeometry* g);
+
+///@}
+
+
+/* ====================================================================== */
+/** @name Geometry Lists
+* Functions to manipulate geometry lists.
+*/
+///@{
+
+/**
+* Creates an empty geometry list container. The geometry
+* list is a utility return type for some functions, and the input
+* type for some functions.
+* \return An empty geometry list.
+* Caller must free with GEOSGeometryList_destroy() or GEOSGeometryList_release.
+* NULL on exception.
+*/
+extern GEOSGeometryList GEOS_DLL * GEOSGeometryList_create();
+
+/**
+* Free all geometries in the list and then free the list itself.
+* \param list The geometry list to be destroyed.
+* \return 1 on success, 0 on failure
+*/
+extern int GEOS_DLL GEOSGeometryList_destroy(GEOSGeometryList* list);
+
+/**
+* Release only the memory associated with a geometry list container,
+* leaving the contained geometries untouched.
+* \param list The geometry list to be released.
+* \return 1 on success, 0 on failure
+*/
+extern int GEOS_DLL GEOSGeometryList_release(GEOSGeometryList* list);
+
+/**
+* Add a geometry to the end of list, or do nothing
+* if the list or the geometry are null.
+* \param list The geometry list to add the geometry to.
+* \param g The geometry to be added.
+* \return 1 on success, 0 on failure
+*/
+extern int GEOS_DLL
+    GEOSGeometryList_push(
+        GEOSGeometryList* list,
+        GEOSGeometry* g);
+
+/**
+* Return the geometry currently at the end of the list
+* and remove it from the list.
+* \param list The geometry list to access.
+* \return The last geometry in the list.
+*/
+extern GEOSGeometry* GEOS_DLL
+    GEOSGeometryList_pop(
+        GEOSGeometryList* list);
+
+/**
+* Return the length of the list or -1 on error.
+* \param list The geometry list to access.
+* \return The list length or -1 on error.
+*/
+extern int GEOS_DLL
+    GEOSGeometryList_size(
+        GEOSGeometryList* list);
+
+/**
+* Return the geometry at an location in the list.
+* \param list The geometry list to access.
+* \param i The index of the geometry to access.
+* \return The geometry at index location or null on error.
+*/
+extern GEOSGeometry* GEOS_DLL
+    GEOSGeometryList_at(
+        GEOSGeometryList* list,
+        unsigned int i);
 
 ///@}
 
