incorporate @dbaston review

--- a/capi/geos_c.h.in
+++ b/capi/geos_c.h.in
@@ -3692,9 +3692,10 @@ extern GEOSGeometry GEOS_DLL *GEOSOffsetCurve(const GEOSGeometry* g,
 *        will be set with a geometry collection of the same length as
 *        the input, with a MULTILINESTRING of the error edges for each
 *        invalid polygon, or an EMPTY where the polygon is a valid
-*        participant in the coverage.
-* \return A value of 1 for a valid coverage, 0 for invalid and -1 for
-*         a processing error. Invalidity includes polygons that overlap,
+*        participant in the coverage. Pass NULL if you do not want
+*        the invalid edges returned.
+* \return A value of 1 for a valid coverage, 0 for invalid and 2 for
+*         an exception or error. Invalidity includes polygons that overlap,
 *         that have gaps smaller than the gapWidth, or non-polygonal
 *         entries in the input collection.
 *
