--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,16 +22,25 @@ jobs:
           arch: 64,
           packages: 'g++',
           cmake: 3.15.*,
-          os: ubuntu-18.04
+          os: ubuntu-latest
         }
+        # - {
+        #   compiler: g++,
+        #   build_type: Release,
+        #   cxxstd: 11,
+        #   arch: 32,
+        #   packages: 'g++-4.8-multilib gcc-4.8-multilib g++-multilib gcc-multilib',
+        #   cmake: 3.13.*,
+        #   os: ubuntu-18.04
+        # }
         - {
-          compiler: g++,
+          compiler: clang++,
           build_type: Release,
           cxxstd: 11,
-          arch: 32,
-          packages: 'g++-4.8-multilib gcc-4.8-multilib g++-multilib gcc-multilib',
+          arch: 64,
+          packages: 'clang',
           cmake: 3.13.*,
-          os: ubuntu-18.04
+          os: ubuntu-latest
         }
         - {
           compiler: clang++,
@@ -40,16 +49,7 @@ jobs:
           arch: 64,
           packages: 'clang',
           cmake: 3.13.*,
-          os: ubuntu-18.04
-        }
-        - {
-          compiler: clang++,
-          build_type: Release,
-          cxxstd: 11,
-          arch: 64,
-          packages: 'clang',
-          cmake: 3.13.*,
-          os: ubuntu-18.04
+          os: ubuntu-latest
         }
         - {
           compiler: clang++,
@@ -59,7 +59,7 @@ jobs:
           packages: 'g++',
           cmake: 3.15.*,
           cmake_extra: '-DDISABLE_GEOS_INLINE=ON',
-          os: ubuntu-20.04
+          os: ubuntu-latest
         }
         - {
           compiler: clang++,
@@ -68,7 +68,7 @@ jobs:
           arch: 64,
           packages: 'clang',
           cmake: 3.17.*,
-          os: ubuntu-20.04,
+          os: ubuntu-latest,
         }
         - {
           compiler: clang++,
@@ -77,7 +77,7 @@ jobs:
           arch: 64,
           packages: 'clang',
           cmake: 3.17.*,
-          os: ubuntu-20.04
+          os: ubuntu-latest
         }
 
     runs-on: ${{ matrix.ci.os }}
