--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
           cxxstd: 11,
           arch: 64,
           packages: 'g++ cmake doxygen',
-          os: ubuntu-18.04
+          os: ubuntu-latest
         }
         - {
           compiler: g++,
@@ -30,23 +30,23 @@ jobs:
           cxxstd: 11,
           arch: 64,
           packages: 'g++ automake doxygen git2cl',
-          os: ubuntu-18.04
+          os: ubuntu-latest
         }
-        - {
-          compiler: g++,
-          build: autotools,
-          cxxstd: 11,
-          arch: 32,
-          packages: 'g++-4.8-multilib gcc-4.8-multilib g++-multilib gcc-multilib doxygen automake git2cl',
-          os: ubuntu-18.04
-        }
+        # - {
+        #   compiler: g++,
+        #   build: autotools,
+        #   cxxstd: 11,
+        #   arch: 32,
+        #   packages: 'g++-4.8-multilib gcc-4.8-multilib g++-multilib gcc-multilib doxygen automake git2cl',
+        #   os: ubuntu-18.04
+        # }
         - {
           compiler: clang++,
           build: cmake,
           cxxstd: 11,
           arch: 64,
           packages: 'clang cmake doxygen',
-          os: ubuntu-18.04
+          os: ubuntu-latest
         }
         - {
           compiler: g++,
@@ -54,7 +54,7 @@ jobs:
           cxxstd: 11,
           arch: 64,
           packages: 'g++ cmake doxygen',
-          os: ubuntu-20.04
+          os: ubuntu-latest
         }
         - {
           compiler: clang++,
@@ -62,7 +62,7 @@ jobs:
           cxxstd: 14,
           arch: 64,
           packages: 'clang cmake doxygen',
-          os: ubuntu-20.04
+          os: ubuntu-latest
         }
 
 
