--- a/capi/geos_c.h.in
+++ b/capi/geos_c.h.in
@@ -2453,7 +2453,7 @@ extern GEOSGeometry GEOS_DLL *GEOSGeom_createCollection(
 * that the caller is responsible for destroying. The output geometries
 * are also the responsibility of the caller, as is the containing array,
 * which must be freed with GEOSFree().
-* \param geom The collection that will have its components released.
+* \param collection The collection that will have its components released.
 * \param ngeoms A pointer to a variable that will be filled with the
 *        size of the output array.
 * \return A newly allocated array of GEOSGeometry pointers.
