GHA: provide unique Job ID names (for `act -l` and `act -j name`)

--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -14,9 +14,9 @@ on:
 
 jobs:
 
-  linux:
+  container:
 
-    name: 'Linux'
+    name: 'Build container'
     if: github.repository == 'libgeos/geos'
     runs-on: ubuntu-latest
 
