--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -27,55 +27,59 @@ stages:
   jobs:
 
   - job: 'Linux'
-    pool:
-      vmImage: 'ubuntu-18.04'
     strategy:
       matrix:
         GCC 8:
           CXXSTD: 11, 14, 17, 20
           CXX: g++-8
           PACKAGES: g++-8
+          VM_IMAGE: ubuntu-20.04
+          VM_NAME: focal
         GCC 7:
           CXXSTD: 11, 14, 17
           CXX: g++-7
           PACKAGES: g++-7
-        GCC 6:
-          CXXSTD: 11, 14
-          CXX: g++-6
-          PACKAGES: g++-6
-        GCC 5:
-          CXXSTD: 11
-          CXX: g++-5
-          PACKAGES: g++-5
-        Clang 8:
-          CXXSTD: 11, 14, 17
-          CXX: clang++-8
-          PACKAGES: clang-8
-          LLVM_REPO: llvm-toolchain-xenial-8
-        Clang 7:
-          CXXSTD: 14, 17
-          CXX: clang++-7
-          PACKAGES: clang-7
-          LLVM_REPO: llvm-toolchain-xenial-7
-        Clang 6:
-          CXXSTD: 14, 17
-          CXX: clang++-6.0
-          PACKAGES: clang-6.0
-          LLVM_REPO: llvm-toolchain-xenial-6.0
-        Clang 5:
-          CXXSTD: 11, 14, 17
-          PACKAGES: clang-5.0
-          CXX: clang++-5.0
-          LLVM_REPO: llvm-toolchain-xenial-5.0
-        Clang 4:
-          CXXSTD: 11, 14
-          CXX: clang++-4.0
-          PACKAGES: clang-4.0
-          LLVM_REPO: llvm-toolchain-xenial-4.0
-        Clang 3.9:
-          CXXSTD: 11, 14
-          CXX: clang++-3.9
-          PACKAGES: clang-3.9
+          VM_IMAGE: ubuntu-20.04
+          VM_NAME: focal
+        # GCC 6:
+        #   CXXSTD: 11, 14
+        #   CXX: g++-6
+        #   PACKAGES: g++-6
+        # GCC 5:
+        #   CXXSTD: 11
+        #   CXX: g++-5
+        #   PACKAGES: g++-5
+        # Clang 8:
+        #   CXXSTD: 11, 14, 17
+        #   CXX: clang++-8
+        #   PACKAGES: clang-8
+        #   LLVM_REPO: llvm-toolchain-xenial-8
+        # Clang 7:
+        #   CXXSTD: 14, 17
+        #   CXX: clang++-7
+        #   PACKAGES: clang-7
+        #   LLVM_REPO: llvm-toolchain-xenial-7
+        # Clang 6:
+        #   CXXSTD: 14, 17
+        #   CXX: clang++-6.0
+        #   PACKAGES: clang-6.0
+        #   LLVM_REPO: llvm-toolchain-xenial-6.0
+        # Clang 5:
+        #   CXXSTD: 11, 14, 17
+        #   PACKAGES: clang-5.0
+        #   CXX: clang++-5.0
+        #   LLVM_REPO: llvm-toolchain-xenial-5.0
+        # Clang 4:
+        #   CXXSTD: 11, 14
+        #   CXX: clang++-4.0
+        #   PACKAGES: clang-4.0
+        #   LLVM_REPO: llvm-toolchain-xenial-4.0
+        # Clang 3.9:
+        #   CXXSTD: 11, 14
+        #   CXX: clang++-3.9
+        #   PACKAGES: clang-3.9
+    pool:
+      vmImage: $(VM_IMAGE)
     steps:
     - script: |
         set -e
@@ -83,7 +87,7 @@ stages:
         sudo -E apt-add-repository -y "ppa:ubuntu-toolchain-r/test"
         if test -n "${LLVM_REPO}" ; then
           wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
-          sudo -E apt-add-repository "deb http://apt.llvm.org/xenial/ ${LLVM_REPO} main"
+          sudo -E apt-add-repository "deb http://apt.llvm.org/${VM_NAME}/ ${LLVM_REPO} main"
         fi
         sudo -E apt-get update
         sudo -E apt-get -yq --no-install-suggests --no-install-recommends install cmake ${PACKAGES}
@@ -137,14 +141,14 @@ stages:
           CXXSTD: 20
           CXXFLAGS: -permissive-
           VM_IMAGE: 'windows-2019'
-        VS 2017 C++17:
-          TOOLSET: msvc-14.1
-          CXXSTD: 17
-          VM_IMAGE: 'vs2017-win2016'
-        VS 2017 C++14:
-          TOOLSET: msvc-14.1
-          CXXSTD: 14 # default
-          VM_IMAGE: 'vs2017-win2016'
+        # VS 2017 C++17:
+        #   TOOLSET: msvc-14.1
+        #   CXXSTD: 17
+        #   VM_IMAGE: 'vs2017-win2016'
+        # VS 2017 C++14:
+        #   TOOLSET: msvc-14.1
+        #   CXXSTD: 14 # default
+        #   VM_IMAGE: 'vs2017-win2016'
     pool:
       vmImage: $(VM_IMAGE)
     steps:
@@ -172,9 +176,10 @@ stages:
 
   - job: 'macOS'
     pool:
-      vmImage: 'macOS-10.15'
+      vmImage: 'macOS-11'
     strategy:
       matrix:
+        # https://github.com/actions/runner-images/blob/main/images/macos/macos-11-Readme.md#xcode
         Xcode 11.7:
           TOOLSET: clang
           CXXSTD: 14, 17
@@ -183,10 +188,10 @@ stages:
           TOOLSET: clang
           CXXSTD: 14, 17
           XCODE_APP: /Applications/Xcode_12.4.app
-        Xcode 10.3:
-          TOOLSET: clang
-          CXXSTD: 11, 14, 17
-          XCODE_APP: /Applications/Xcode_10.3.app
+        # Xcode 10.3:
+        #   TOOLSET: clang
+        #   CXXSTD: 11, 14, 17
+        #   XCODE_APP: /Applications/Xcode_10.3.app
     steps:
     - script: |
         set -e
